[project]
name = "combined-kaggle-mushrooms-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
